# G-Claw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/gclaw-config/: Cargo.toml
crates/gclaw-config/src/: config.rs  lib.rs
crates/gclaw-ipc/: Cargo.toml
crates/gclaw-ipc/fuzz/: Cargo.toml
crates/gclaw-ipc/fuzz/fuzz_targets/: fuzz_codec.rs
crates/gclaw-ipc/src/: codec.rs  lib.rs  protocol.rs  transport.rs
crates/gclaw-ipc/tests/: integration.rs
crates/gclaw-voice/: Cargo.toml
crates/gclaw-voice/examples/: ipc_demo.rs
crates/gclaw-voice/src/: bridge.rs  error.rs  lib.rs  main.rs  shell.rs  state.rs
crates/gclaw-voice/src/audio/: capture.rs  mod.rs  playback.rs
crates/gclaw-voice/src/bargein/: controller.rs  mod.rs
crates/gclaw-voice/src/stt/: mod.rs  whisper.rs
crates/gclaw-voice/src/tts/: espeak.rs  mod.rs  piper.rs
crates/gclaw-voice/src/vad/: mod.rs  silero.rs
crates/gclaw-voice/src/wake/: detector.rs
crates/gclaw-voice/tests/: integration.rs
docs/: ARCHITECTURE.md  IPC_PROTOCOL.md  VOICE_PIPELINE.md
python_bridge/: gclaw_bridge.py
scripts/: download_models.py
