[package]
name = "gclaw-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
getrandom = "0.4"
hostname = "0.4"
whoami = "1"
